# stktk

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
resources/: resources.rc
resources/audio/: sounds.md
resources/graphics/icon/: make_ico.sh
src/: CMakeLists.txt  animation.cpp  animation.h  box.cpp  box.h  clock.cpp  clock.h  consts.h  game.cpp  game.h  initial_position.h  log.cpp  log.h  main.cpp  math.cpp  math.h  player.cpp  player.h  resource_loader.cpp  resource_loader.h  start.cpp  window.cpp  window.h  world.cpp  world.h
src/game/: CMakeLists.txt
src/game/include/game/: clock.h  config.h  consts.h  game.h  initial_position.h  log.h  menu_screen.h  resource_loader.h  screen.h  screen_debug.h  serializer.h  sound_system.h  start.h  window.h  world.h
src/game/include/game/graphics/: score.h  text.h
src/game/include/game/graphics/menu/: button.h  menu.h  menu_high_score.h  menu_item.h  menu_level.h  menu_list.h  menu_options.h  menu_start.h
src/game/include/game/graphics/objects/: box.h  crane.h  object.h  player.h
src/game/include/game/menu/: button.h  menu.h  menu_item.h  menu_level.h  menu_options.h  menu_start.h  text.h
src/game/include/game/objects/: box.h  crane.h  figure.h  hourglass.h  number.h  player.h
src/game/include/game/version/: make_build_number.cmake  version.h  version_revision_build.h
src/game/src/: animation.cpp  clock.cpp  config.cpp  game.cpp  log.cpp  menu_screen.cpp  resource_loader.cpp  screen.cpp  screen_debug.cpp  serializer.cpp  sound_system.cpp  start.cpp  window.cpp  world.cpp
src/game/src/graphics/: score.cpp  text.cpp
src/game/src/graphics/menu/: button.cpp  menu.cpp  menu_high_score.cpp  menu_item.cpp  menu_level.cpp  menu_list.cpp  menu_options.cpp  menu_start.cpp
src/game/src/graphics/objects/: box.cpp  crane.cpp  object.cpp  player.cpp
src/game/src/math/: math.cpp
src/game/src/menu/: button.cpp  menu.cpp  menu_item.cpp  menu_level.cpp  menu_options.cpp  menu_start.cpp  text.cpp
src/game/src/objects/: box.cpp  crane.cpp  hourglass.cpp  number.cpp  object.cpp  player.cpp
src/game/src/version/: version.cpp
src/launcher/: CMakeLists.txt  main.cpp
src/math/: math.h
src/objects/: box.cpp  box.h  crane.cpp  crane.h  hourglass.cpp  hourglass.h  number.cpp  number.h  object.cpp  object.h  player.cpp  player.h
src/version/: makebuildnumber.cmake  version.cpp  version.h  versionbuildrevision.h
